fix: update list processes handler
